fork Interceptor.csproj to build in x86 leaving submodule clean

--- a/move_mouse/move_mouse.csproj
+++ b/move_mouse/move_mouse.csproj
@@ -95,7 +95,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\interception\Interceptor\Interceptor.csproj">
+    <ProjectReference Include="..\Interceptor.csproj">
       <Project>{c451a00e-77f1-4f3f-b7ee-27dc712ea316}</Project>
       <Name>Interceptor</Name>
     </ProjectReference>
