--- a/eye_tracking_mouse/packages.config
+++ b/eye_tracking_mouse/packages.config
@@ -7,5 +7,6 @@
   <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
   <package id="Splat" version="1.6.2" targetFramework="net472" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net472" />
+  <package id="TaskScheduler" version="2.8.17" targetFramework="net472" />
   <package id="Tobii.Interaction" version="0.7.3" targetFramework="net472" />
 </packages>
