--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "interception"]
 	path = interception
-	url = git@github.com:jasonpang/Interceptor.git
+	url = https://github.com/jasonpang/Interceptor.git
