refactoring before implementing enhanced algorithm
1) move CalibrationWindow to ShiftStorage
2) add interface IConfigurationManager

--- a/eye_tracking_mouse/eye_tracking_mouse.csproj
+++ b/eye_tracking_mouse/eye_tracking_mouse.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Arrowheads\ArrowEnds.cs" />
     <Compile Include="Arrowheads\ArrowLine.cs" />
     <Compile Include="Arrowheads\ArrowLineBase.cs" />
-    <Compile Include="AsyncSaver.cs" />
+    <Compile Include="FilesSavingQueue.cs" />
     <Compile Include="Autostart.cs" />
     <Compile Include="CalibrationSettings.xaml.cs">
       <DependentUpon>CalibrationSettings.xaml</DependentUpon>
