implement calibration algorithm with shading

--- a/eye_tracking_mouse/eye_tracking_mouse.csproj
+++ b/eye_tracking_mouse/eye_tracking_mouse.csproj
@@ -117,6 +117,8 @@
   <ItemGroup>
     <Compile Include="CalibrationManager.cs" />
     <Compile Include="CalibrationManagerV0.cs" />
+    <Compile Include="CalibrationManagerV1.cs" />
+    <Compile Include="ShiftPosition.cs" />
     <Compile Include="ui\Arrowheads\ArrowEnds.cs" />
     <Compile Include="ui\Arrowheads\ArrowLine.cs" />
     <Compile Include="ui\Arrowheads\ArrowLineBase.cs" />
