--- a/BlindConfigurationTester/BlindConfigurationTester.csproj
+++ b/BlindConfigurationTester/BlindConfigurationTester.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CalibrationModeGeneratorWindow.xaml.cs">
       <DependentUpon>CalibrationModeGeneratorWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CalibrationModeIterator.cs" />
     <Compile Include="CalibrationModesForTesting.cs" />
     <Compile Include="CloseAppDialog.xaml.cs">
       <DependentUpon>CloseAppDialog.xaml</DependentUpon>
