--- a/BlindConfigurationTester/BlindConfigurationTester.csproj
+++ b/BlindConfigurationTester/BlindConfigurationTester.csproj
@@ -105,8 +105,15 @@
     <Compile Include="DataSetSetupControl.xaml.cs">
       <DependentUpon>DataSetSetupControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GnuPlot.cs" />
     <Compile Include="InputInitWindow.xaml.cs">
       <DependentUpon>InputInitWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ManualVisualisationWindow\ManualVisualisationWindow.xaml.cs">
+      <DependentUpon>ManualVisualisationWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ManualVisualisationWindow\OptionControl.xaml.cs">
+      <DependentUpon>OptionControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="NameInput.xaml.cs">
       <DependentUpon>NameInput.xaml</DependentUpon>
@@ -148,6 +155,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="InputInitWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ManualVisualisationWindow\ManualVisualisationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ManualVisualisationWindow\OptionControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
