--- a/BlindConfigurationTester/BlindConfigurationTester.csproj
+++ b/BlindConfigurationTester/BlindConfigurationTester.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>ConfigurationTestVisualisationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="DataSet.cs" />
+    <Compile Include="DataSetBuilder.cs" />
     <Compile Include="DataSetSetupControl.xaml.cs">
       <DependentUpon>DataSetSetupControl.xaml</DependentUpon>
     </Compile>
